[gd_scene load_steps=8 format=3 uid="uid://b1hurt7kd0beg"]

[ext_resource type="Script" path="res://scripts/Controller/game_controller.gd" id="1_a6j28"]
[ext_resource type="Resource" uid="uid://dwl3rlgrug82i" path="res://resources/light/theme_test.tres" id="2_tqna5"]
[ext_resource type="Texture2D" uid="uid://bvvpnp2suxfe6" path="res://Assets/Images/question_layout.png" id="3_8m7ml"]
[ext_resource type="AudioStream" uid="uid://lggn6mbxvmyc" path="res://Assets/Audio/choice_correct.mp3" id="3_hmoir"]
[ext_resource type="Texture2D" uid="uid://73ky5ccfd6a8" path="res://Assets/Images/Button.png" id="3_kcbwi"]
[ext_resource type="AudioStream" uid="uid://di05e7bgj4hps" path="res://Assets/Audio/choice_wrong.mp3" id="4_bikjo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_el2jc"]

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_a6j28")
quiz = ExtResource("2_tqna5")
color_correct = Color(0, 1, 0, 1)
color_wrong = Color(1, 0, 0, 1)

[node name="Content" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Content"]
texture_filter = 1
layout_mode = 0
offset_left = 10.0
offset_top = 102.0
offset_right = 710.0
offset_bottom = 495.0
texture = ExtResource("3_8m7ml")

[node name="Question_Info" type="VBoxContainer" parent="Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 14.0
offset_right = -19.0
offset_bottom = -786.0
grow_horizontal = 2
grow_vertical = 2

[node name="Question_Text" type="Label" parent="Content/Question_Info"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 50
text = "PERGUNTA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Question_Assets" type="Panel" parent="Content/Question_Info"]
custom_minimum_size = Vector2(0, 390)
layout_mode = 2

[node name="Question_Image" type="TextureRect" parent="Content/Question_Info/Question_Assets"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Question_Video" type="VideoStreamPlayer" parent="Content/Question_Info/Question_Assets"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand = true

[node name="Question_Audio" type="AudioStreamPlayer" parent="Content/Question_Info/Question_Assets"]

[node name="Question_Options" type="VBoxContainer" parent="Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 535.0
offset_right = -5.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Option_1" type="Button" parent="Content/Question_Options"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_el2jc")
icon = ExtResource("3_kcbwi")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Option_2" type="Button" parent="Content/Question_Options"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_el2jc")
icon = ExtResource("3_kcbwi")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Option_3" type="Button" parent="Content/Question_Options"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_el2jc")
icon = ExtResource("3_kcbwi")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Audio_Correct" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hmoir")
pitch_scale = 0.9

[node name="Audio_Wrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_bikjo")
